# ft-mcq

./: .gitignore  pyproject.toml
ftmcq/: dohuyen-9k-demo.ipynb  dpo-sardukar.ipynb  mmlu-eval.ipynb  mmlu-ft-phi-3-mini-dpo.ipynb  papermill-demo.ipynb  sardukar-dpo.ipynb
vtmedq/: demo.ipynb  model_eval.ipynb
