[project]
name = "vtmedq"
version = "0.1.0"
description = "A simple Python project"
requires-python = ">=3.10,<3.11"
dependencies = [
  "accelerate>=0.26.0",
  "datasets>=3.3.2",
  "more-itertools>=10.6.0",
  "torch>=2.6.0",
  "transformers>=4.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.34.0",
    "ipywidgets>=8.1.5",
]
