[project]
name = "ftmcq"
version = "0.1.0"
description = "LLM Finetuning on Multiple Choice Questions"
requires-python = ">=3.10,<3.11"
dependencies = [
  "accelerate>=0.26.0",
  "bitsandbytes>=0.45.3",
  "datasets>=3.3.2",
  "matplotlib>=3.10.1",
  "more-itertools>=10.6.0",
  "papermill>=2.6.0",
  "peft>=0.15.0",
  "python-dotenv>=1.0.1",
  "torch>=2.6.0",
  "transformers>=4.49.0",
  "trl>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.34.0",
    "ipywidgets>=8.1.5",
]
